@@ -1,3 +1,8 @@
+2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/synth.c (synth_flash_erase_block): Remove asserts which are
+	no longer true.
+
 2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/flash_synth.c: Allow the use of arbitary sized block.
